Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20726

InnoDB: Assertion failure in file data0type.cc line 67

    XMLWordPrintable

Details

    Description

      The following SQL query always crashes MariaDB 10.4.8:

      ALTER TABLE `local_db`.`ratings_copy` MODIFY courier_rating_comment text DEFAULT NULL COMMENT 'Отзыв клиента';
      

      Oct  2 18:02:01 phb mysqld[5224]: 2019-10-02 18:02:01 0x7f2728838700  InnoDB: Assertion failure in file /home/buildbot/buildbot/build/mariadb-10.4.8/storage/innobase/data/data0type.cc line 67
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: Failing assertion: !(prefix_len % mbmaxlen)
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: We intentionally generate a memory trap.
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: Submit a detailed bug report to https://jira.mariadb.org/
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: If you get repeated assertion failures or crashes, even
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: immediately after the mysqld startup, there may be
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: corruption in the InnoDB tablespace. Please refer to
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: https://mariadb.com/kb/en/library/innodb-recovery-modes/
      Oct  2 18:02:01 phb mysqld[5224]: InnoDB: about forcing recovery.
      Oct  2 18:02:01 phb mysqld[5224]: 191002 18:02:01 [ERROR] mysqld got signal 6 ;
      Oct  2 18:02:01 phb mysqld[5224]: This could be because you hit a bug. It is also possible that this binary
      Oct  2 18:02:01 phb mysqld[5224]: or one of the libraries it was linked against is corrupt, improperly built,
      Oct  2 18:02:01 phb mysqld[5224]: or misconfigured. This error can also be caused by malfunctioning hardware.
      Oct  2 18:02:01 phb mysqld[5224]: To report this bug, see https://mariadb.com/kb/en/reporting-bugs
      Oct  2 18:02:01 phb mysqld[5224]: We will try our best to scrape up some info that will hopefully help
      Oct  2 18:02:01 phb mysqld[5224]: diagnose the problem, but since we have already crashed,
      Oct  2 18:02:01 phb mysqld[5224]: something is definitely wrong and this may fail.
      Oct  2 18:02:01 phb mysqld[5224]: Server version: 10.4.8-MariaDB-1:10.4.8+maria~bionic
      Oct  2 18:02:01 phb mysqld[5224]: key_buffer_size=134217728
      Oct  2 18:02:01 phb mysqld[5224]: read_buffer_size=131072
      Oct  2 18:02:01 phb mysqld[5224]: max_used_connections=2
      Oct  2 18:02:01 phb mysqld[5224]: max_threads=153
      Oct  2 18:02:01 phb mysqld[5224]: thread_count=8
      Oct  2 18:02:01 phb mysqld[5224]: It is possible that mysqld could use up to
      Oct  2 18:02:01 phb mysqld[5224]: key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 467735 K  bytes of memory
      Oct  2 18:02:01 phb mysqld[5224]: Hope that's ok; if not, decrease some variables in the equation.
      Oct  2 18:02:01 phb mysqld[5224]: Thread pointer: 0x7f26b0000c08
      Oct  2 18:02:01 phb mysqld[5224]: Attempting backtrace. You can use the following information to find out
      Oct  2 18:02:01 phb mysqld[5224]: where mysqld died. If you see no messages after this, something went
      Oct  2 18:02:01 phb mysqld[5224]: terribly wrong...
      Oct  2 18:02:01 phb mysqld[5224]: stack_bottom = 0x7f2728837dd8 thread_stack 0x49000
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x559b33363fae]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(handle_fatal_signal+0x515)[0x559b32dd9185]
      Oct  2 18:02:01 phb mysqld[5224]: /lib/x86_64-linux-gnu/libpthread.so.0(+0x12890)[0x7f272e040890]
      Oct  2 18:02:01 phb mysqld[5224]: linux/raise.c:51(__GI_raise)[0x7f272c972e97]
      Oct  2 18:02:01 phb mysqld[5224]: stdlib/abort.c:81(__GI_abort)[0x7f272c974801]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(+0x568a64)[0x559b32ae2a64]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(+0xbba5b8)[0x559b331345b8]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(+0xac103f)[0x559b3303b03f]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(+0xac906f)[0x559b3304306f]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(+0xacb19a)[0x559b3304519a]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(+0xa1df8a)[0x559b32f97f8a]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_Z17mysql_alter_tableP3THDPK25st_mysql_const_lex_stringS3_P14HA_CREATE_INFOP10TABLE_LISTP10Alter_infojP8st_orderb+0x2bea)[0x559b32c5de5a]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_ZN19Sql_cmd_alter_table7executeEP3THD+0x3fe)[0x559b32cb339e]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x1f2b)[0x559b32bc8a6b]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x22a)[0x559b32bcf5fa]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x1689)[0x559b32bd1e29]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_Z10do_commandP3THD+0x148)[0x559b32bd3418]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x25e)[0x559b32caecce]
      Oct  2 18:02:01 phb mysqld[5224]: /usr/sbin/mysqld(handle_one_connection+0x3d)[0x559b32caed8d]
      Oct  2 18:02:01 phb mysqld[5224]: nptl/pthread_create.c:463(start_thread)[0x7f272e0356db]
      Oct  2 18:02:01 phb mysql-workbench[24677]: gtk_tree_view_unref_tree_helper: assertion 'node != NULL' failed
      Oct  2 18:02:01 phb mysqld[5224]: x86_64/clone.S:97(clone)[0x7f272ca5588f]
      Oct  2 18:02:01 phb mysqld[5224]: Trying to get some variables.
      Oct  2 18:02:01 phb mysqld[5224]: Some pointers may be invalid and cause the dump to abort.
      Oct  2 18:02:01 phb mysqld[5224]: Query (0x7f26b0010000): ALTER TABLE `local_db`.`ratings_copy` MODIFY courier_rating_comment text DEFAULT NULL COMMENT '                         '
      Oct  2 18:02:01 phb mysqld[5224]: Connection ID (thread ID): 36
      Oct  2 18:02:01 phb mysqld[5224]: Status: NOT_KILLED
      Oct  2 18:02:01 phb mysqld[5224]: Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on
      Oct  2 18:02:01 phb mysqld[5224]: The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      Oct  2 18:02:01 phb mysqld[5224]: information that should help you find out what is causing the crash.
      Oct  2 18:02:01 phb mysqld[5224]: Writing a core file...
      Oct  2 18:02:01 phb mysqld[5224]: Working directory at /var/lib/mysql
      Oct  2 18:02:01 phb mysqld[5224]: Resource Limits:
      Oct  2 18:02:01 phb mysqld[5224]: Limit                     Soft Limit           Hard Limit           Units
      Oct  2 18:02:01 phb mysqld[5224]: Max cpu time              unlimited            unlimited            seconds
      Oct  2 18:02:01 phb mysqld[5224]: Max file size             unlimited            unlimited            bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max data size             unlimited            unlimited            bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max stack size            8388608              unlimited            bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max core file size        0                    unlimited            bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max resident set          unlimited            unlimited            bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max processes             62611                62611                processes
      Oct  2 18:02:01 phb mysqld[5224]: Max open files            16364                16364                files
      Oct  2 18:02:01 phb mysqld[5224]: Max locked memory         16777216             16777216             bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max address space         unlimited            unlimited            bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max file locks            unlimited            unlimited            locks
      Oct  2 18:02:01 phb mysqld[5224]: Max pending signals       62611                62611                signals
      Oct  2 18:02:01 phb mysqld[5224]: Max msgqueue size         819200               819200               bytes
      Oct  2 18:02:01 phb mysqld[5224]: Max nice priority         0                    0
      Oct  2 18:02:01 phb mysqld[5224]: Max realtime priority     0                    0
      Oct  2 18:02:01 phb mysqld[5224]: Max realtime timeout      unlimited            unlimited            us
      Oct  2 18:02:01 phb mysqld[5224]: Core pattern: |/usr/share/apport/apport %p %s %c %d %P
      

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              filb Philipp Bolotov
              Votes:
              3 Vote for this issue
              Watchers:
              16 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 4.5h
                  2d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.