storage/innobase/handler/ha_innodb.cc
@@ -21143,26 +21143,25 @@ Compare_keys ha_innobase::compare_key_parts(
     const KEY_PART_INFO &old_part, const KEY_PART_INFO &new_part) const
 {
   const bool is_equal= old_field.is_equal(new_field);
+  const CHARSET_INFO *old_cs= old_field.charset();
+  const CHARSET_INFO *new_cs= new_field.charset;
 
   if (!is_equal)
   {
     if (!old_field.can_be_converted_by_engine(new_field))
       return Compare_keys::NotEqual;
 
-    if (!Charset(old_field.charset())
-             .eq_collation_specific_names(new_field.charset))
-    {
+    if (!Charset(old_cs).eq_collation_specific_names(new_cs))
       return Compare_keys::NotEqual;
-    }
   }
 
-  if (old_part.length != new_part.length)
+  if (old_part.length / old_cs->mbmaxlen != new_part.length / new_cs->mbmaxlen)
   {
-    if (old_part.length != old_field.field_length ||
-        old_part.length >= new_part.length || is_equal)
-    {
+    if (old_part.length != old_field.field_length)
       return Compare_keys::NotEqual;
-    }
+
+    if (old_part.length >= new_part.length)
+      return Compare_keys::NotEqual;
 
     return Compare_keys::EqualButKeyPartLength;
   }
